<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_root_RLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tv_delete_alerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_alert_delete"
        android:textColor="#6c6c6c"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_delete_alerm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_alert_btn_cancle"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:background="@drawable/dialog_cancle"
            android:text="@string/dialog_alert_cancle"
            android:textColor="#555456"
            android:textSize="15dp" />

        <Button
            android:id="@+id/dialog_alert_btn_confirm"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/dialog_confirm"
            android:text="@string/dialog_alert_comfire"
            android:textColor="#ffffff"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>